syntax = "proto3";

package events.v1;

import "models/v1/event_context.proto";
import "models/v1/user.proto";

message UserRegistered {
    models.v1.EventContext context = 1;
    models.v1.User user = 2;
}